--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <tr>
             <td colspan="2">
                 <footer>
-                    &copy; 2024 Wildan Muhtasyam
+                    &copy; Yoga Gilang Ramadan
                 </footer>
             </td>
         </tr>
